# consciousness

./: .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  =2.0.0  CLAUDE.md  Dockerfile  FEATURE_ANALYSIS_SUMMARY.md  Feedback.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  Makefile  OPERATING.md  PHASE_6_COMPLETION_REPORT.md  README.md  USER.md  UX_FLOW_DIAGRAMS.md  alembic.ini  consciousness.db  dashboard-mobile-patterns.md  demo_consciousness_ui.py  docker-compose.dev.yml  docker-compose.prod.yml  error_monitor.py  feature_inventory.json  main.py  memory_key.txt  pyproject.toml  qa_comprehensive_test.js  test_api_endpoints.py  test_safla_simple.py  typescript
.claude/: config.json
.github/workflows/: deploy.yml  test-suite.yml
alembic/: env.py
alembic/versions/: 668a1a58feab_initial_consciousness_schema_with_.py
architecture-analysis/: device-integration-current-state.md  digital-twin-architecture-recommendations.md
archive/logs/: consciousness.db
archive/memory-test-data/: swarm-auto-centralized-1750804281867-installation-validator-results.json  swarm-auto-centralized-1750867027621-qa-test-results.json
archive/reports/: CONSCIOUSNESS_UI_DEBUG_REPORT.md  QA_FINAL_REPORT.md  QA_FINAL_VALIDATION_REPORT.md
archive/summaries/: PHASE4_COMPLETION_SUMMARY.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  dashboard-ui-summary.md
archive/swarm-reports/: swarm-auto-centralized-1750801426183.json  swarm-auto-centralized-1750804281867.json
archive/test-code/: test_consciousness_ui.py  test_device_interview_flow.py  test_safla_integration.py
archive/test-results/: api_test_results.json  comprehensive_qa_report.json  qa_test_results.json
config/: development.yaml  production.yaml  testing.yaml
config/devices/: devices.yaml  house.yaml  integration.yaml  scenarios.yaml
consciousness/: __init__.py  config.py  database.py  demo_devices.py  health.py  main.py  simple_health.py
consciousness/components/: analyze_module.py  feedback_module.py  learn_module.py  safla_loop.py  sense_module.py
consciousness/config/: device_config.py
consciousness/core/: consciousness_engine.py  decision_engine.py  emotion_processor.py  learning_engine.py  memory_manager.py  prediction_engine.py  query_engine.py
consciousness/digital_twin/: __init__.py  core.py  integration.py  models.py  simulation.py  synchronization.py  twin_manager.py
consciousness/discovery/: __init__.py  auto_discovery.py
consciousness/interfaces/: api_interface.py  demo_dashboard.py  openapi_config.py
consciousness/interview/: __init__.py  device_classifier.py  integration_matcher.py  interview_controller.py  question_generator.py
consciousness/io/: device_controller.py  device_integration.py
consciousness/models/: __init__.py  base.py  consciousness.py  entities.py  events.py  interview.py
consciousness/repositories/: __init__.py  base.py  consciousness.py
consciousness/security/: __init__.py  audit.py  config.py
consciousness/simulators/: __init__.py  base.py  demo_scenarios.py  device_simulator.py  devices.py  manager.py  scenarios.py
consciousness/static/: README.md  api-client.js  api_test_checklist.md  api_test_ui.html  dashboard.html  enhanced-api-client.js  implementation-README.md  index.html  ui-state.js
consciousness/utils/: security.py
deploy/: README.md
deploy/monitoring/: prometheus.yml
deploy/nginx/: dev.conf  prod.conf
deploy/redis/: redis.conf
deploy/systemd/: consciousness-worker.service  consciousness.service
docs/: demo_guide.md
memory/: swarm-auto-centralized-1750801426183-device-specialist-progress.json
memory/backups/: backup-2025-06-23T18-56-04-099Z.json  backup-2025-06-23T18-56-08-661Z.json  backup-2025-06-23T18-56-39-768Z.json  backup-2025-06-23T18-57-42-818Z.json  (+38 more)
plans/: 00-implementation-roadmap.md  01-project-setup-guide.md  02-database-implementation-guide.md  03-consciousness-engine-guide.md  04-safla-loop-guide.md  05-device-integration-guide.md  06-api-interface-guide.md  07-testing-implementation-guide.md  08-deployment-operations-guide.md  COORDINATED_UPDATES_SUMMARY.md  HOUSE_CONSCIOUSNESS_FEATURE_INVENTORY.md  UX_FLOW_DESIGN.md  dashboard-ui-flows.md  dashboard-ui-patterns.md  dashboard-user-journeys.md  device-interview-system.md  dynamic-device-schema.md  tdd-strategy.md  technical-implementation-plan.md  user-experience-flows.md  ux-metrics-plan.md
reports/: swarm-auto-centralized-1750783459845.json  swarm-auto-centralized-1750785211145.json  swarm-auto-centralized-1750787449271.json  swarm-auto-centralized-1750787961794.json  swarm-auto-centralized-1750804281867.json  swarm-auto-centralized-1750863513188.json
scripts/: backup.sh  deployment-check.sh  dev.py  migrate.py  restore.sh  run_demo.py  update.bat  update.sh
test-install-env/: pyvenv.cfg
tests/: conftest.py  test_demo_system.py  test_setup.py
(+38 files in other folders)
